# docs

./: .gitignore  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  generate.yml  links.yml  maintenance.tpl.yml  submodules.yml
docs/blog/: 2026-06-19-test-for-obsidian-bulk-tag-manager-on-version-140.md
docs/hidden/: 2026-06-13-enveloppe-get-started.md
includes/: abbreviations.md
overrides/: 404.html  index.html  main.html
python/tmw-macros/: pyproject.toml  setup.py
python/tmw-macros/src/tmw_macros/: __init__.py  on_env.py  on_page_markdown.py  on_post_page.py
