[project]
name = "codeshell-docs"
version = "0.0.0"
description = "Guides, scripts, snippets and discussions on dev topics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel",
]

[tool.ruff.lint]
select = ["PTH", "ANN", "N", "Q", "PL", "E", "F", "I"]
ignore = ["E501"]
exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.7", "venv3.8", "venv3.9", "venv3.10", "__pycache__"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[dependency-groups]
dev = [
    "zensical>=0.0.46",
]
