[project]
name = "tmw-macros"
version = "0.1.1"
description = "Test macros library for macros plugin"
readme = "README.md"
authors = [
    { name = "codeshell", email = "git.running939@passinbox.com" }
]
requires-python = ">=3.13"
dependencies = [
    "babel",
    "bs4",
    "pydantic",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
